--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Cover Template for Bootstrap</title>
+    <title>Chris McNabb Shipping Monkeys Company</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -35,7 +35,7 @@
         <div class="cover-container">
 
           <div class="inner cover">
-            <h1 class="cover-heading">Company Logo</h1>
+            <h1 class="cover-heading">Chris McNabb Shipping Monkeys Company</h1>
             <p class="tagline">Simple, social, mobile &amp; hyper-local.</p>
             <p class="lead">Leave your email address to be the first to know when we launch:</p>
             <p class="lead">
